Correct problems of selection mainly visible with thumbnails view, but also with item selection where unselect with a second click doesn't unselect item

--- a/src/main/webapp/css/esup-stock.css
+++ b/src/main/webapp/css/esup-stock.css
@@ -553,6 +553,9 @@ margin-left: 5px;
 	height: 100%;
 	overflow: hidden;
 }
+.esupstock .thumbnail .inner_thumbnail > input {
+    position: absolute;
+}
 
 .esupstock .thumbnail a img {
 	margin-top: 16px;
